--- a/slam_toolbox/config/mapper_params_localization.yaml
+++ b/slam_toolbox/config/mapper_params_localization.yaml
@@ -7,15 +7,16 @@ ceres_dogleg_type: TRADITIONAL_DOGLEG
 ceres_loss_function: None
 
 # ROS Parameters
-odom_frame: odom
-map_frame: map
-base_frame: base_footprint
-scan_topic: /scan
-mode: mapping #localization
+odom_frame: robot_odom
+map_frame: robot_map
+base_frame: robot_base_footprint
+scan_topic: /robot/merged_laser/scan
+mode: mapping
 
 # if you'd like to start localizing on bringup in a map and pose
-#map_file_name: test_steve
-#map_start_pose: [5.0, 1.0, 0.0]
+map_file_name: /home/afont/maps/test_local_mod_3_1
+map_start_pose: [5.13, -1.17, -3.14]
+map_start_at_dock: false
 
 debug_logging: false
 throttle_scans: 1
