--- a/slam_toolbox/config/mapper_params_online_async.yaml
+++ b/slam_toolbox/config/mapper_params_online_async.yaml
@@ -7,18 +7,18 @@ ceres_dogleg_type: TRADITIONAL_DOGLEG
 ceres_loss_function: None
 
 # ROS Parameters
-odom_frame: odom
-map_frame: map
-base_frame: base_footprint
-scan_topic: /scan
-mode: mapping #localization
+odom_frame: robot_odom
+map_frame: robot_map
+base_frame: robot_base_footprint
+scan_topic: /robot/merged_laser/scan
+mode: localization
 
 # if you'd like to immediately start continuing a map at a given pose
 # or at the dock, but they are mutually exclusive, if pose is given
 # will use pose
-#map_file_name: test_steve
+map_file_name: /home/afont/maps/short_1
 # map_start_pose: [0.0, 0.0, 0.0]
-#map_start_at_dock: true
+map_start_at_dock: false
 
 debug_logging: false
 throttle_scans: 1
